--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "6.4",
     "react-twitter-embed": "^4.0.4",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "vercel": "^30.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
